fixed z-index issues

--- a/styles/_extra.scss
+++ b/styles/_extra.scss
@@ -205,6 +205,7 @@
 
 .sidebar {
     position: fixed;
+    z-index: 10;
     top: 0;
     left: 0;
     display: flex;
