--- a/styles/main.css
+++ b/styles/main.css
@@ -464,6 +464,7 @@ body {
 
 .sidebar {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   display: -webkit-box;
